fix wrap

--- a/style.css
+++ b/style.css
@@ -426,11 +426,10 @@ button{
 }
 #projectsTitle{
     color: rgba(94, 94, 94, 1);
-    text-wrap: nowrap;
     padding-left: 1%;
     padding-right: 1%;
     font-size: 150%;
-    text-wrap: nowrap;
+    white-space: nowrap;
 }
 .projectsLine{
     background-color: rgba(94, 94, 94, 1);
